# crypto-wallet-cli

./: Cargo.toml  README.md
src/: main.rs
src/entities/: mod.rs
src/entities/concrete/: mod.rs  owner.rs  token.rs  wallet.rs  walletoken.rs
src/entities/services/: api_interaction.rs  app_files.rs  bd_connection.rs  db_connection.rs  mod.rs  panel.rs  validate_registration.rs
src/enums/: menu_option.rs  mod.rs  prog_status.rs
