[package]
name = "crypto-wallet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
rpassword = "7.3.1"
tokio-postgres = "0.7.12"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.38"
rand = "0.8.5"
bincode = "1.3.3"
serde = {version="1.0.216", features=["derive"]}
reqwest = {version="0.12.9", features=["json"]}
serde_json = "1.0.133"